<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">

	<modelVersion>4.0.0</modelVersion>
	
	<groupId>fr.openwide.core.parents</groupId>
	<artifactId>owsi-core-parent-maven-configuration-common</artifactId>
	<version>0.9-SNAPSHOT</version>
	<packaging>pom</packaging>
	
	<name>OWSI Core - Parent - Maven configuration - Common</name>
	
	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
		<maven.build.timestamp.format>yyyyMMdd</maven.build.timestamp.format>
		
		<jdk.version>1.7</jdk.version>
		
		<minimal.maven.version>3.1.1</minimal.maven.version>
		
		<generated-sources.directory>target/generated-sources/apt</generated-sources.directory>
		<generated-sources-test.directory>target/generated-sources-test/apt</generated-sources-test.directory>
		
		<owsi-core.maven-compiler-plugin.version>3.1</owsi-core.maven-compiler-plugin.version>
		<owsi-core.maven-resources-plugin.version>2.6</owsi-core.maven-resources-plugin.version>
		<owsi-core.maven-surefire-plugin.version>2.16</owsi-core.maven-surefire-plugin.version>
		<owsi-core.maven-install-plugin.version>2.5.1</owsi-core.maven-install-plugin.version>
		<owsi-core.maven-release-plugin.version>2.4.2</owsi-core.maven-release-plugin.version>
		<owsi-core.maven-war-plugin.version>2.4</owsi-core.maven-war-plugin.version>
		<owsi-core.maven-assembly-plugin.version>2.4</owsi-core.maven-assembly-plugin.version>
		<owsi-core.maven-jar-plugin.version>2.4</owsi-core.maven-jar-plugin.version>
		<owsi-core.maven-deploy-plugin.version>2.8.1</owsi-core.maven-deploy-plugin.version>
		<owsi-core.maven-source-plugin.version>2.2.1</owsi-core.maven-source-plugin.version>
		<owsi-core.maven-javadoc-plugin.version>2.9.1</owsi-core.maven-javadoc-plugin.version>
		<owsi-core.maven-enforcer-plugin.version>1.3.1</owsi-core.maven-enforcer-plugin.version>
		
		<owsi-core.wagon-maven-plugin.version>1.0-beta-4</owsi-core.wagon-maven-plugin.version>
		<owsi-core.wagon-ssh-external-plugin.version>2.6</owsi-core.wagon-ssh-external-plugin.version>
		
		<owsi-core.maven-processor-plugin.version>2.2.4</owsi-core.maven-processor-plugin.version>
		<owsi-core.maven-yui-compressor-plugin.version>1.3.3</owsi-core.maven-yui-compressor-plugin.version>
		<owsi-core.aspectj-maven-plugin.version>1.4</owsi-core.aspectj-maven-plugin.version>
	</properties>
	
	<prerequisites>
		<maven>${minimal.maven.version}</maven>
	</prerequisites>
	
	<build>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-enforcer-plugin</artifactId>
				<version>${owsi-core.maven-enforcer-plugin.version}</version>
				<executions>
					<execution>
						<id>enforce</id>
						<goals>
							<goal>enforce</goal>
						</goals>
						<configuration>
							<rules>
								<DependencyConvergence />
								<bannedDependencies>
									<excludes>
										<exclude>org.springframework:spring</exclude>
										<exclude>org.springframework:spring-ldap</exclude>
										<exclude>commons-logging:commons-logging</exclude>
										<exclude>cglib:cglib</exclude>
										<exclude>rhino:rhino</exclude>
										<exclude>rhino:js</exclude>
										<exclude>javassist:javassist</exclude>
										<exclude>xml-apis:xml-apis</exclude>
										<exclude>apache-xerces:xml-apis</exclude>
										<exclude>javax.servlet:servlet-api</exclude>
									</excludes>
								</bannedDependencies>
								<requireMavenVersion>
									<version>[${minimal.maven.version},)</version>
								</requireMavenVersion>
								<requireJavaVersion>
									<version>${jdk.version}</version>
								</requireJavaVersion>
							</rules>
						</configuration>
					</execution>
				</executions>
			</plugin>
		</plugins>
		<pluginManagement>
			<plugins>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-compiler-plugin</artifactId>
					<version>${owsi-core.maven-compiler-plugin.version}</version>
					<configuration>
						<source>${jdk.version}</source>
						<target>${jdk.version}</target>
						<compilerArgument>-proc:none</compilerArgument>
						<testCompilerArgument>-proc:none</testCompilerArgument>
					</configuration>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-resources-plugin</artifactId>
					<version>${owsi-core.maven-resources-plugin.version}</version>
					<configuration>
						<!--
						Par défaut, @ est utilisé comme délimiteur et ne peut pas être
						échappé correctement. Historiquement, nous n'avons jamais utilisé
						ces placeholders ; on les supprime donc de la configuration
						Voir MRESOURCES-141
						-->
						<delimiters>
							<delimiter>${*}</delimiter>
						</delimiters>
						<useDefaultDelimiters>false</useDefaultDelimiters>
						<nonFilteredFileExtensions>
							<nonFilteredFileExtension>zip</nonFilteredFileExtension>
							<nonFilteredFileExtension>gz</nonFilteredFileExtension>
							<nonFilteredFileExtension>pdf</nonFilteredFileExtension>
							<nonFilteredFileExtension>xls</nonFilteredFileExtension>
							<nonFilteredFileExtension>xlsx</nonFilteredFileExtension>
							<nonFilteredFileExtension>doc</nonFilteredFileExtension>
							<nonFilteredFileExtension>docx</nonFilteredFileExtension>
							<nonFilteredFileExtension>jpg</nonFilteredFileExtension>
							<nonFilteredFileExtension>jpeg</nonFilteredFileExtension>
							<nonFilteredFileExtension>gif</nonFilteredFileExtension>
							<nonFilteredFileExtension>png</nonFilteredFileExtension>
							<nonFilteredFileExtension>svg</nonFilteredFileExtension>
							<nonFilteredFileExtension>psd</nonFilteredFileExtension>
							<nonFilteredFileExtension>ftl</nonFilteredFileExtension>
							<!-- Fichier de licence Alfresco -->
							<nonFilteredFileExtension>lic</nonFilteredFileExtension>
						</nonFilteredFileExtensions>
					</configuration>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-surefire-plugin</artifactId>
					<version>${owsi-core.maven-surefire-plugin.version}</version>
					<configuration>
						<argLine>-Xms512m -Xmx1024m -XX:MaxPermSize=256m</argLine>
					</configuration>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-jar-plugin</artifactId>
					<version>${owsi-core.maven-jar-plugin.version}</version>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-war-plugin</artifactId>
					<version>${owsi-core.maven-war-plugin.version}</version>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-install-plugin</artifactId>
					<version>${owsi-core.maven-install-plugin.version}</version>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-release-plugin</artifactId>
					<version>${owsi-core.maven-release-plugin.version}</version>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-assembly-plugin</artifactId>
					<version>${owsi-core.maven-assembly-plugin.version}</version>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-deploy-plugin</artifactId>
					<version>${owsi-core.maven-deploy-plugin.version}</version>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-source-plugin</artifactId>
					<version>${owsi-core.maven-source-plugin.version}</version>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-javadoc-plugin</artifactId>
					<version>${owsi-core.maven-javadoc-plugin.version}</version>
				</plugin>
				<plugin>
					<groupId>org.bsc.maven</groupId>
					<artifactId>maven-processor-plugin</artifactId>
					<version>${owsi-core.maven-processor-plugin.version}</version>
					<dependencies>
						<dependency>
							<groupId>org.hibernate</groupId>
							<artifactId>hibernate-jpamodelgen</artifactId>
							<version>${owsi-core.hibernate-jpamodelgen.version}</version>
						</dependency>
						<dependency>
							<groupId>com.mysema.querydsl</groupId>
							<artifactId>querydsl-apt</artifactId>
							<version>${owsi-core.querydsl.version}</version>
						</dependency>
					</dependencies>
					<configuration>
						<outputDirectory>${generated-sources.directory}</outputDirectory>
						<options>
							<fullyAnnotationConfigured>true</fullyAnnotationConfigured>
							<addSuppressWarningsAnnotation>true</addSuppressWarningsAnnotation>
						</options>
						<processors>
							<processor>org.hibernate.jpamodelgen.JPAMetaModelEntityProcessor</processor>
							<processor>com.mysema.query.apt.jpa.JPAAnnotationProcessor</processor>
						</processors>
					</configuration>
					<executions>
						<execution>
							<id>maven-processor-plugin-default</id>
							<phase>generate-sources</phase>
							<goals>
								<goal>process</goal>
							</goals>
						</execution>
						<execution>
							<id>maven-processor-plugin-default-test</id>
							<phase>generate-test-sources</phase>
							<goals>
								<goal>process-test</goal>
							</goals>
							<configuration>
								<outputDirectory>${generated-sources-test.directory}</outputDirectory>
							</configuration>
						</execution>
					</executions>
				</plugin>
				<plugin>
					<groupId>net.alchim31.maven</groupId>
					<artifactId>yuicompressor-maven-plugin</artifactId>
					<version>${owsi-core.maven-yui-compressor-plugin.version}</version>
					<executions>
						<execution>
							<id>default</id>
							<goals>
								<goal>compress</goal>
							</goals>
						</execution>
					</executions>
					<configuration>
						<includes>
							<include>**/*.css</include>
							<include>**/*.js</include>
						</includes>
						<suffix>.min</suffix>
						<linebreakpos>10000</linebreakpos>
						<sourceDirectory>${basedir}/src/main/java</sourceDirectory>
					</configuration>
				</plugin>
				<plugin>
					<groupId>org.codehaus.mojo</groupId>
					<artifactId>wagon-maven-plugin</artifactId>
					<version>${owsi-core.wagon-maven-plugin.version}</version>
					<dependencies>
						<dependency>
							<groupId>org.apache.maven.wagon</groupId>
							<artifactId>wagon-ssh-external</artifactId>
							<version>${owsi-core.wagon-ssh-external-plugin.version}</version>
						</dependency>
					</dependencies>
				</plugin>
				
				<!--This plugin's configuration is used to store Eclipse m2e settings only. It has no influence on the Maven build itself.-->
				<plugin>
					<groupId>org.eclipse.m2e</groupId>
					<artifactId>lifecycle-mapping</artifactId>
					<version>1.0.0</version>
					<configuration>
						<lifecycleMappingMetadata>
							<pluginExecutions>
								<pluginExecution>
									<pluginExecutionFilter>
										<groupId>net.alchim31.maven</groupId>
										<artifactId>yuicompressor-maven-plugin</artifactId>
										<versionRange>[1.2,)</versionRange>
										<goals>
											<goal>compress</goal>
										</goals>
									</pluginExecutionFilter>
									<action>
										<ignore />
									</action>
								</pluginExecution>
								<pluginExecution>
									<pluginExecutionFilter>
										<groupId>org.apache.maven.plugins</groupId>
										<artifactId>maven-enforcer-plugin</artifactId>
										<versionRange>[1.0,)</versionRange>
										<goals>
											<goal>enforce</goal>
										</goals>
									</pluginExecutionFilter>
									<action>
										<ignore />
									</action>
								</pluginExecution>
								<pluginExecution>
									<pluginExecutionFilter>
										<groupId>fr.openwide.maven.plugins</groupId>
										<artifactId>localization-properties-consistency-maven-plugin</artifactId>
										<versionRange>[1.0.0,)</versionRange>
										<goals>
											<goal>scan</goal>
										</goals>
									</pluginExecutionFilter>
									<action>
										<ignore />
									</action>
								</pluginExecution>
							</pluginExecutions>
						</lifecycleMappingMetadata>
					</configuration>
				</plugin>
			</plugins>
		</pluginManagement>
	</build>
	
	<profiles>
		<profile>
			<activation>
				<property>
					<name>distribution</name>
					<value>owsi-core-release</value>
				</property>
			</activation>
			<distributionManagement>
				<repository>
					<id>nexus-owsi-core</id>
					<name>Nexus OWSI Core</name>
					<url>https://projects.openwide.fr/services/nexus/content/repositories/owsi-core</url>
				</repository>
				<snapshotRepository>
					<id>nexus-owsi-core-snapshots</id>
					<name>Nexus OWSI Core Snapshots</name>
					<url>https://projects.openwide.fr/services/nexus/content/repositories/owsi-core-snapshots</url>
				</snapshotRepository>
			</distributionManagement>
		</profile>
		<profile>
			<id>eclipse</id>
			<activation>
				<property>
					<name>m2e.version</name>
				</property>
			</activation>
			<build>
				<pluginManagement>
					<plugins>
						<!--
						Eclipse n'aime pas avoir une deuxième fois le même code pour les tests ; il faut
						donc générer le code des tests en même temps.
						De plus, pour alléger le build, on exclut les resources de la génération.
						Il faut appeler le plugin à la main avec la property -Declipse-maven-processor-plugin.
						-->
						<plugin>
							<groupId>org.bsc.maven</groupId>
							<artifactId>maven-processor-plugin</artifactId>
							<configuration>
								<excludes>
									<exclude>**/*</exclude>
								</excludes>
							</configuration>
							<executions>
								<execution>
									<id>maven-processor-plugin-default</id>
									<phase>generate-sources</phase>
									<goals>
										<goal>process</goal>
										<goal>process-test</goal>
									</goals>
								</execution>
								<execution>
									<id>maven-processor-plugin-default-test</id>
									<phase>none</phase>
								</execution>
							</executions>
						</plugin>
					</plugins>
				</pluginManagement>
			</build>
		</profile>
		<profile>
			<!--
			Profil qui existe juste pour désactiver le profil eclipse actif par défaut.
			Lancer maven avec -Declipse-maven-processor-plugin
			-->
			<id>eclipse-maven-processor-plugin</id>
			<activation>
				<property>
					<name>eclipse-maven-processor-plugin</name>
				</property>
			</activation>
		</profile>
	</profiles>
	
</project>